[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites.png" type="Texture" id=1]
[ext_resource path="res://assets/WobbleShaderMat.tres" type="Material" id=2]
[ext_resource path="res://scripts/Planet.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 70.0996

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.977011, 0.0181818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 0.639216 )

[node name="Area" type="Area2D"]
script = ExtResource( 3 )

[node name="PlanetShapes" type="Node2D" parent="."]
modulate = Color( 0.12549, 0.784314, 0.12549, 1 )

[node name="A" type="Sprite" parent="PlanetShapes"]
material = ExtResource( 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 128, 128 )

[node name="B" type="Sprite" parent="PlanetShapes"]
material = ExtResource( 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 128, 0, 128, 128 )

[node name="C" type="Sprite" parent="PlanetShapes"]
material = ExtResource( 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 256, 0, 128, 128 )

[node name="D" type="Sprite" parent="PlanetShapes"]
material = ExtResource( 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 384, 0, 128, 128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.78149, 1.89073 )
shape = SubResource( 1 )

[node name="Exclaim" type="Sprite" parent="."]
modulate = Color( 1, 0.513726, 0, 1 )
material = ExtResource( 2 )
position = Vector2( 3.78149, 3.15125 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 64, 128, 64, 64 )

[node name="DieParts" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.54
initial_velocity_random = 1.0
scale_amount = 10.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area_area_exited"]
[connection signal="input_event" from="." to="." method="_on_Area_input_event"]
